dotCMS/src/main/webapp/html/css/dijit-dotcms/dotcms.css
/* ... */
.newTaskIcon:before {
  content: "";
}

.newWorkflowIcon:before {
  content: "";
}

.nextIcon:before {
  content: "";
}

.pageIcon:before {
  content: "";
}

.pagePropIcon:before {
  content: "";
}

.pasteIcon:before {
  content: "";
}

.personaIcon:before {
  content: "";
}

.plusIcon:before {
  content: "";
}

.previewIcon:before {
  content: "";
}

.previousIcon:before {
  content: "";
}

.propertyIcon:before {
  content: "";
}

.publishIcon:before {
  content: "";
}

.queryIcon:before {
  content: "";
}

.radioIcon:before {
  content: "";
}

.reindexIcon:before {
  content: "";
}

.rememberIcon:before {
  content: "";
}

.reopenWorkflowIcon:before {
  content: "";
}

.reorderIcon:before {
  content: "";
}

.repeatIcon:before {
  content: "";
}

.republishIcon:before {
  content: "";
}

.requiredIcon:before {
  content: "";
}

.resetIcon:before {
  content: "";
}

.resolveIcon:before {
  content: "";
}

.resolveWorkflowIcon:before {
  content: "";
}

.rolesIcon:before {
  content: "";
}

.rServerIcon:before {
  content: "";
}

.saveIcon:before {
  content: "";
}

.statusIcon:before {
  content: "";
}

.saveAssignIcon:before {
  content: "";
}

.scrollPaneIcon:before {
  content: "";
}

.searchIcon:before {
  content: "";
}

.selectIcon:before {
  content: "";
}

.shrinkIcon:before {
  content: "";
}

.spellIcon:before {
  content: "";
}

.splitterIcon:before {
  content: "";
}

.sServerIcon:before {
  content: "";
}

.statisticsIcon:before {
  content: "";
}

.stopIcon:before {
  content: "";
}

.tabIcon:before {
  content: "";
}

.tagIcon:before {
  content: "";
}

.textFieldIcon:before {
  content: "";
}

.thumbnailViewIcon:before {
  content: "";
}

.toggleCloseIcon:before {
  content: "";
}

.toggleOpenIcon:before {
  content: "";
}

.trashIcon:before {
  content: "";
}

.unarchiveIcon:before {
  content: "";
}

.unlockIcon:before {
  content: "";
}

.unpublishIcon:before {
  content: "";
}

.uploadIcon:before {
  content: "";
}

.userIcon:before {
  content: "";
}

.vanityIcon:before {
  content: "";
}

.vtlIcon:before {
  content: "";
}

.windowsIcon:before {
  content: "";
}

.workflowIcon:before {
  content: "";
}

.workingIcon:before {
  content: "";
}

.workStreamIcon:before {
  content: "";
}

.wysiwygIcon:before {
  content: "";
}

.asfIcon:before {
  content: "";
}

.aviIcon:before {
  content: "";
}

.movIcon:before {
  content: "";
}

.mp4Icon:before {
  content: "";
}

.mpgIcon:before {
  content: "";
}

.oggIcon:before {
  content: "";
}

.ogvIcon:before {
  content: "";
}

.rmIcon:before {
  content: "";
}

.vobIcon:before {
  content: "";
}

.csvIcon:before {
  content: "";
}

.numbersIcon:before {
  content: "";
}

.wksIcon:before {
  content: "";
}

.xlsIcon:before {
  content: "";
}

.xlsxIcon:before {
  content: "";
}

.bmpIcon:before {
  content: "";
}

.imageIcon:before {
  content: "";
}

.jpegIcon:before {
  content: "";
}

.jpgIcon:before {
  content: "";
}

.pctIcon:before {
  content: "";
}

.pngIcon:before {
  content: "";
}

.gifIcon:before {
  content: "";
}

.svgIcon:before {
  content: "";
}

.pdfIcon:before {
  content: "";
}

.keynoteIcon:before {
  content: "";
}

.pptIcon:before {
  content: "";
}

.pptxIcon:before {
  content: "";
}

.docIcon:before {
  content: "";
}

.docxIcon:before {
  content: "";
}

.aacIcon:before {
  content: "";
}

.aifIcon:before {
  content: "";
}

.iffIcon:before {
  content: "";
}

.m3uIcon:before {
  content: "";
}

.midIcon:before {
  content: "";
}

.mp3Icon:before {
  content: "";
}

.mpaIcon:before {
  content: "";
}

.raIcon:before {
  content: "";
}

.wavIcon:before {
  content: "";
}

.wmaIcon:before {
  content: "";
}

.shimIconSmall {
  display: inline-block;
  height: 1px;
  width: 12px;
}

.workingIcon {
  color: #F3762A;
}

.liveIcon {
  color: #4A9D51;
}

.lockIcon {
  color: #F3762A;
}

.greyDotIcon {
  opacity: 1 !important;
  color: #ECEDEE;
}

.archivedIcon {
  color: #CB3927;
}

.hostArchivedIcon {
  color: #CB3927;
}

.hostDefaultIcon {
  color: var(--color-main);
}

.hostStoppedIcon {
  color: #C5C5C5;
}

.filter-tasks-frm {
  margin: 56px 20px 0 0;
}

.filter-tasks-frm .who-user label {
  margin-right: 4px;
}

/*

Styles for commons fields along the backend

*/
.glossaryTermPopup {
  border-radius: 2px;
  background-color: #FAFAFA;
  padding: 4px 8px;
  border: solid 1px #ECEDEE;
  position: absolute;
}

.fileAjaxUploader {
  display: flex;
  align-items: center;
  border-radius: 2px;
  border: solid 1px #C5C5C5;
  position: relative;
  height: 36px;
}

.fileAjaxUploader .fileAjaxUploaderForm {
  width: 100%;
}

.fileAjaxUploader input[type="file"]::-webkit-file-upload-button {
  background-color: var(--color-main);
  height: 36px;
  border: 0;
  color: #fff;
  cursor: pointer;
}

.fileAjaxUploader input[type="file"]::-webkit-file-upload-button:hover {
  background-color: var(--color-main_mod);
}

.fileAjaxUploaderActions {
  position: absolute;
  right: 0;
}

.fileAjaxUploaderActions div:first-child {
  margin-right: 8px;
}

.fileAjaxUploaderFileName {
  margin-left: 8px;
}

.fileAjaxUploaderStatus {
  margin-right: 16px;
  display: flex;
  align-items: center;
}

.fileAjaxUploaderStatusMsg {
  margin-left: 8px;
}

.fileAjaxUploader .dijitProgressBar {
  width: 150px;
}

.catPreview {
  background-color: #fff;
  border-radius: 2px;
  border: solid 1px #C5C5C5;
  margin-top: 8px;
  max-width: 1100px;
  min-height: 38px;
  padding: 4px;
}

.catPreview li {
  background: #FAFAFA;
  border-radius: 2px;
  border: solid 1px #C5C5C5;
  display: inline-block;
  font-size: 12px;
  margin: 2px 5px 2px 0px;
  padding: 4px 8px 4px 4px;
  position: relative;
  text-decoration: none;
}

.catPreview a {
  display: inline-block;
  vertical-align: sub;
}

.catPreview a:hover {
  color: #cc0000;
}

.fileSelectorControls .dijitTextBox {
  width: 300px;
}
/* ... */

